--- a/form.html
+++ b/form.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="yandex-verification" content="e40aa9e0bbfca79b" />
     <link rel="stylesheet" href="style.css">
     <title>Могучая кучка</title>
 </head>
